# goddev

./: .gitignore  agent.py  pyproject.toml  requirements.txt
memory/: model_costs.json
src/: config.py  contracts.py  cost_tracker.py  dev_tools.py  engine_telemetry.py  graph.py  llm_router.py  logger.py  main.py  meta_cto.py  self_build_graph.py  session_store.py  squad_leader.py  state.py  task_queue.py  vision_capture.py
src/agents/: critic_council.py  cto.py  integrator.py  llm_router.py  main.py  meta_cto.py  polish_team.py  reflector.py  self_assessor.py  self_deployer.py  self_improver.py  smooth_af.py  sota_researcher.py  squad_leader.py  state.py  ui_critic.py  verify_agents.py  worker.py
src/api/: main.py
src/static/: index.html
src/tools/: dev_tools.py
static/: index.html
