[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "goddev"
version = "3.0.0"
description = "GodDev 3.0 — Hierarchical Autonomous AI Development Team"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
goddev = "src.api.main:start"
